# brave-core

./: DEPS  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd  brave_main_delegate.cc
browser/: BUILD.gn  brave_content_browser_client.cc
browser/brave_rewards/: checkout_dialog.cc  checkout_dialog.h  extension_rewards_service_observer.cc  extension_rewards_service_observer.h
browser/brave_shields/: ad_block_service_browsertest.cc
browser/extensions/: BUILD.gn
browser/farbling/: BUILD.gn
browser/net/: brave_ad_block_tp_network_delegate_helper.cc
browser/payments/: brave_payment_request_delegate.cc  brave_payment_request_delegate.h
browser/profiles/: brave_profile_manager.cc
browser/resources/: resource_ids
browser/tor/: onion_location_navigation_throttle_browsertest.cc
browser/ui/: BUILD.gn
common/: webui_url_constants.cc  webui_url_constants.h
components/definitions/: chromel.d.ts  newTab.d.ts
components/unstoppable_domains/: BUILD.gn
patches/: chrome-VERSION.patch  chrome-browser-BUILD.gn.patch  chrome-browser-net-stub_resolver_config_reader.cc.patch  chrome-browser-payments-chrome_payment_request_delegate.cc.patch  chrome-browser-ui-webui-sync_internals_message_handler.cc.patch  components-payments-content-BUILD.gn.patch  components-payments-content-payment_request.cc.patch  content-browser-renderer_host-navigation_request.cc.patch  extensions-browser-extension_event_histogram_value.h.patch  net-dns-dns_transaction.cc.patch
test/: BUILD.gn
(+103 files in other folders)
